header alignments fixed

--- a/scss/_partials/_header.scss
+++ b/scss/_partials/_header.scss
@@ -57,8 +57,7 @@ header {
       font-size: 12px;
       text-transform: uppercase;
       line-height: 23px;
-      padding: 0 8px;
-      margin: 0 10px;
+      padding: 0 18px;
       height: 100%;
       line-height: 58px;
 
@@ -68,13 +67,13 @@ header {
       }
     }
 
-    li {
+    > div > ul > li {
       &:first-child a {
-        margin-left: 0;
+        padding-left: 7px;
       }
 
       &:last-child a {
-        margin-right: 0;
+        padding-right: 7px;
       }
     }
 
@@ -91,10 +90,10 @@ header {
               content: '';
               display: inline-block;
               position: absolute;
-              width: calc(100% + 16px);
+              width: calc(100% + 14px);
               height: 5px;
               background-color: #f95259;
-              left: -8px;
+              left: -7px;
               bottom: 0;
             }
           }
@@ -114,10 +113,10 @@ header {
         }
 
         .dropdown {
-          left: -37px;
           background-color: #fff;
           display: none;
           width: 226px;
+          left: -20px;
   
           &__menu {
             padding: 24px 0 !important;
@@ -128,7 +127,7 @@ header {
               a {
                 display: inline-block;
                 width: 100%;
-                padding: 8px 45px;
+                padding: 8px 38px;
                 font-size: 15px;
                 line-height: 23px;
                 color: #919191;
@@ -174,6 +173,43 @@ header {
           }
         }
 
+        &:first-child .dropdown {
+          left: -30px;
+
+          ul {
+            li {
+              a {
+                padding-left: 37px;
+              }
+            }
+          }
+        }
+
+        &:last-child .dropdown {
+          left: 0;
+
+          > ul {
+            padding-top: 51px !important;
+
+            > li {
+              width: 25%;
+
+              &:not(:last-child) {
+                border-right: 1px solid #f0eded;
+              }
+            }
+          }
+          
+          h6 {
+            padding: 0 38px;
+            color: #2f3241;
+            font-weight: 800;
+            font-size: 14px;
+            line-height: 1.1em;
+            font-family: Montserrat,sans-serif;
+          }
+        }
+
         &:hover {
           .dropdown {
             display: block;
@@ -191,6 +227,12 @@ header {
 
           i {
             font-size: 1.1rem;
+          }
+        }
+
+        &:last-child {
+          a {
+            padding-right: 0;
           }
         }
 
