--- a/scss/style.css
+++ b/scss/style.css
@@ -52,8 +52,7 @@ header .navbar__left--item > a, header .navbar__right--item > a {
   font-size: 12px;
   text-transform: uppercase;
   line-height: 23px;
-  padding: 0 8px;
-  margin: 0 10px;
+  padding: 0 18px;
   height: 100%;
   line-height: 58px;
 }
@@ -61,11 +60,11 @@ header .navbar__left--item > a:hover, header .navbar__right--item > a:hover {
   color: #f95259;
   transition: color 0.3s;
 }
-header .navbar li:first-child a {
-  margin-left: 0;
+header .navbar > div > ul > li:first-child a {
+  padding-left: 7px;
 }
-header .navbar li:last-child a {
-  margin-right: 0;
+header .navbar > div > ul > li:last-child a {
+  padding-right: 7px;
 }
 header .navbar__left--item {
   height: 100%;
@@ -78,20 +77,20 @@ header .navbar__left--item > .item__active span::after {
   content: "";
   display: inline-block;
   position: absolute;
-  width: calc(100% + 16px);
+  width: calc(100% + 14px);
   height: 5px;
   background-color: #f95259;
-  left: -8px;
+  left: -7px;
   bottom: 0;
 }
 header .navbar__left--item:first-child .dropdown__menu--item a {
   padding: 8px 37px;
 }
 header .navbar__left--item .dropdown {
-  left: -37px;
   background-color: #fff;
   display: none;
   width: 226px;
+  left: -20px;
 }
 header .navbar__left--item .dropdown__menu {
   padding: 24px 0 !important;
@@ -102,7 +101,7 @@ header .navbar__left--item .dropdown__menu--item {
 header .navbar__left--item .dropdown__menu--item a {
   display: inline-block;
   width: 100%;
-  padding: 8px 45px;
+  padding: 8px 38px;
   font-size: 15px;
   line-height: 23px;
   color: #919191;
@@ -131,6 +130,32 @@ header .navbar__left--item .dropdown__menu--item:hover > a {
 header .navbar__left--item .dropdown__menu--item:hover .submenu {
   display: block;
 }
+header .navbar__left--item:first-child .dropdown {
+  left: -30px;
+}
+header .navbar__left--item:first-child .dropdown ul li a {
+  padding-left: 37px;
+}
+header .navbar__left--item:last-child .dropdown {
+  left: 0;
+}
+header .navbar__left--item:last-child .dropdown > ul {
+  padding-top: 51px !important;
+}
+header .navbar__left--item:last-child .dropdown > ul > li {
+  width: 25%;
+}
+header .navbar__left--item:last-child .dropdown > ul > li:not(:last-child) {
+  border-right: 1px solid #f0eded;
+}
+header .navbar__left--item:last-child .dropdown h6 {
+  padding: 0 38px;
+  color: #2f3241;
+  font-weight: 800;
+  font-size: 14px;
+  line-height: 1.1em;
+  font-family: Montserrat, sans-serif;
+}
 header .navbar__left--item:hover .dropdown {
   display: block;
 }
@@ -142,6 +167,9 @@ header .navbar__right--item a {
 }
 header .navbar__right--item a i {
   font-size: 1.1rem;
+}
+header .navbar__right--item:last-child a {
+  padding-right: 0;
 }
 header .navbar__right--item .pro__cart--quantity {
   right: 4px;
